--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.4",
     "websocket": "^1.0.34",
