--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
+    "react-toastify": "^9.1.1",
     "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.4",
     "websocket": "^1.0.34",
